# eid-project

./: .gitignore  CMakeLists.txt  README.md
cmake/: compiler-flags.cmake  config-setup.cmake  eid-library-install.cmake  eid-wrapper-install.cmake  eid_projectConfig.cmake.in  image-decoder-wrapper.cmake  install-instructions.cmake
include/abstract-image-formats/: abstract-image-formats.hpp
include/image-decoder/: image-decoder.hpp
include/image-decoder-wrapper/image-decoder-wrapper/: image-decoder-wrapper.h
include/image-formats/: bmp-format.hpp  png-format.hpp  ppm-format.hpp  tiff-format.hpp
include/utils/: debugging.hpp  typings.hpp  utils.hpp  zlib-stream-manager.hpp
src/image-decoder/: image-decoder.cpp
src/image-decoder-wrapper/: image-decoder-wrapper.cpp
src/image-formats/: png-format.cpp
src/utils/: utils.cpp  zlib-stream-manager.cpp
tests/: CMakeLists.txt
tests/include/: utils.hpp
tests/include/run-tests/: utils.hpp
tests/input-images/: test_image.kra
tests/output-images/: rgb_16_bits.tiff  rgb_8_bits.tiff  rgba_16_bits.tiff  rgba_8_bits.tiff
tests/src/: run-tests.cpp  utils.cpp
tests/src/image-decoder-wrapper-tests/: image-decoder-wrapper-tests.c
tests/src/run-tests/: run-tests.cpp  utils.cpp
